--- a/public/css/contactresponsive.css
+++ b/public/css/contactresponsive.css
@@ -300,14 +300,26 @@ and (orientation: portrait)
         position: relative;
         left: 3%;
     }
+    .dropdown-content-account {
+        font-size: 47px;
+        width: 506px;
+        left: -133px;
+        top: 70px;
+        line-height: 52px;
+        border-radius: 27px;
+    }
+    h5.user-name {
+        position: relative;
+        left: 30rem;
+    }    
     .topnav.responsive .ordinary {
         font-size: 45px;
         position: relative;
         left: 1.5em;
     }
     .headmenu .icons .icons2 {
-        width: 110px;
-        height: 123px;
+        width: 78px;
+        height: 68px;
         border-radius: 50%;
         margin-right: 23px;
     }
@@ -442,12 +454,26 @@ and (orientation: portrait)
         position: relative;
         left: 0%;
     }
-    .dropdown-content-account {
-        width: 325px;
-        height: 187px;
-        font-size: 52px;
-        line-height: 83px;
+    img.d-arrow.dar {
+        display: none;
     }
+    .dropdown-content-account {
+        width: 551px;
+        height: 482px;
+        font-size: 51px;
+        line-height: 46px;
+        left: -40px;
+        top: 30px;
+    }
+    .dropdown-content-account a {
+    
+        width: 391px;
+        padding: 18px 51px;
+    }
+    h5.user-name {
+        position: relative;
+        left: 30rem;
+    }    
     .topnav.responsive .ordinary {
         font-size: 40px;
         position: relative;
@@ -455,12 +481,12 @@ and (orientation: portrait)
     }
     .headmenu .icons .icons3 {
         margin-top: 7px;
-        width: 103px;
-        height: 109px;
+        width: 78px;
+        height: 68px;
     }
     .search-icon img {
-        width: 73px;
-        height: 109px;
+        width: 78px;
+        height: 68px;
         margin-right: 10px;
     }
     .des-logo img {
@@ -487,7 +513,7 @@ and (orientation: portrait)
     .footer-contact-info {
         line-height: 67px;
         position: relative;
-        left: 1em;
+        /* left: 1em; */
     }
     .footers-copyright {
         display: flex;
@@ -650,10 +676,26 @@ and (max-width: 731px)
 and (min-width: 411px)
 and (orientation: portrait)
 {
+    
     .headmenu .icons .icons2 {
         width: 5.125rem;
         height: 5.125rem!important;
     }
+    .dropdown-content-account {
+        height: 430px;
+        width: 550px;
+        line-height: 50px;
+        font-size: 45px;
+        left: -188px;
+    }
+    h5.user-name {
+        position: relative;
+        left: 1rem;
+    }
+    .dropdown-content-account a {
+        width: 386px!important;
+        padding: 10px 32px;
+    }    
     .social-media-icons a img {
         height: 111px;
         position: relative;
@@ -795,6 +837,14 @@ and (orientation: portrait)
         position: relative;
         left: -27%;
     }
+    .dropdown-content-account a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        font-weight: 700;
+        width: 300px;
+    }
     span.sp {
         font-size: 18px;
     }
@@ -875,29 +925,52 @@ and (max-width:767px)
 and (min-width:375px)
 and (orientation: portrait)
 {
-
-
+    .dropdown-content-account {
+        height: 430px;
+        width: 550px;
+        line-height: 50px;
+        font-size: 45px;
+    }
+    .dropdown-content-account a {
+        width: 300px;
+    }
+    .dropdown-content-account {
+        height: 430px;
+        width: 550px;
+        line-height: 50px;
+        font-size: 45px;
+        left: -207px;
+        top: 30px;
+    }
+    .dropdown-content-account a {
+        width: 471px;
+        padding: 12px 51px;
+    }
+    h5.user-name {
+        position: relative;
+        left: 1rem;
+    }
     .container-left {
         position: relative;
         left: 3%;
     }
-    .dropdown-content-account {
+    /* .dropdown-content-account {
         font-size: 45px;
         height: 177px;
         width: 332px;
-        line-height: 50px;
-    }    
+        
+    }     */
     .headmenu .icons .icons2 {
-        width: 110px;
-        height: 103px;
+        width: 78px;
+        height: 68px;
         border-radius: 50%;
         margin-right: 23px;
     }
     span.sp {
-        font-size: 54px;
+        font-size: 48px;
     }
     .info-contacts {
-        font-size: 63px;
+        font-size: 48px;
     }
     .footer-contact-info {
         line-height: 110px;
@@ -1053,6 +1126,22 @@ and (orientation: portrait)
     .container-left {
         position: relative;
         left: 3%;
+    }
+    .headmenu .icons .icons2 {
+        width: 106px;
+        height: 95px;
+    }
+    h5.user-name {
+        position: relative;
+        left: 29rem;
+    }
+    .dropdown-content-account {
+        font-size: 47px;
+        width: 532px;
+        left: -175px;
+        top: 70px;
+        line-height: 52px;
+        border-radius: 27px;
     }
     .contact_bottom_main_right_top.clearfix {
         display: none;
