--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -4,7 +4,8 @@
 .topnav  a { display: block; }
 .topnav:not(responsive)  a {max-height: 0;}
 .topnav.responsive  a {max-height: 600px;}
-.topnav.responsive {transition: .2s ease-in;}
+.topnav.responsive {transition: .2s ease-in;border-top: solid #ccc 1px;
+}
 
 .topnav {
     position: absolute;
@@ -123,7 +124,7 @@
 	/*width: 85%;*/
 	/*-webkit-box-pack: justify;*/
 	/*-ms-flex-pack: justify;*/
-	/*justify-content: space-around;*/
+	justify-content: center;
   }
   
   .shop-sorting {
@@ -231,9 +232,11 @@
     position: absolute;
     display: none;
     color: #ccc;
-    font-size: 31px;
+    font-size: 28px;
     padding: 4px 12px;
     border-radius: 50%;
+    left: 1px;
+    top: 13px;
 }
   
   .shop-cart-icon i:hover {
@@ -2883,20 +2886,39 @@
     	width: 193px;
 	}
 	/*end*/
-	/*.shop-items {
-		width: 196px;
-	}*/
 	.shop-info-price {
-		font-size: 17px;
+		font-size: 15px;
+		padding: 5px 0px;
 	}
 	.cart-icon {
-		left: 71px;
-    	top: 44px;
-    	width: 49px;
-    	height: 49px;
+		left: 66px;
+	    top: 41px;
+	    width: 44px;
+	    height: 44px;
+	}
+	.shop-items {
+	    width: 44%;
+	}
+	.shop-items-conts {
+		margin: 10px auto;
+	}
+	.sort-items select {
+	    font-size: 13px;
+	    width: 116px;
+	}
+	.shop-sorting {
+	    font-size: 14px;
+	}
+	.shop-cart-icon i {
+	    top: -1px;
+	    left: 1px;
+	    font-size: 23px;
 	}
 }
 @media screen and (max-width: 411px) {
+	.shop-items {
+	    width: 43%;
+	}
 	.col-price {
 		width: 100%;
 		position: relative;
@@ -2909,10 +2931,11 @@
 		top: -76%;
 	}
 	#myDropdown a {
-    	font-size: 18px;
+    	font-size: 34px;
 	}
 	div#myDropdown {
         line-height: 4px;
+        width: 19.9375rem;
     }
 	.dropdown-account {
     	width: 30%;
@@ -2964,6 +2987,7 @@
 	}
 	.topnav.responsive .ordinary {
 		font-size: 15px;
+	    padding: 16px 0px;
 	}
 	.td2 {
 		display: none;
@@ -2982,14 +3006,61 @@
 		font-size: 17px;
 	}
 	.cart-icon {
-		width: 51px;
-		height: 51px;
-		bottom: 47px;
-		left: 69px;
+		width: 42px;
+		height: 42px;
+		top: 43px;
+		left: 66px;
 	}
 	.shop-company {
 		font-size: 28px;
 		margin: 52px 0;
+	}
+	.shop-cart-icon i {
+		left: 0px;
+    	top: -1px;
+    	font-size: 22px;
+	}
+	.dropdown-content-account {
+	    font-size: 34px;
+	    line-height: 35px;
+	    padding: 0px 39px;
+	}
+	.dropdown-content-account h5 {
+		font-size: 37px;
+	    margin-top: 37px;
+	    font-weight: bold;
+	}
+	.search-icon img {
+		width: 1.8125rem;
+    	height: 1.8125rem;
+	}
+	.headmenu .icons .icons3 {
+        width: 2.3rem;
+	}
+	img.d-arrow.dar {
+		width: 26px;
+		top: 4px;
+		left: 7%;
+	}
+	.company-logo {
+	     padding: 0; 
+	}
+	.topnav a {
+    	width: 122px;
+	}
+	/*.topnav a {
+		width: 307px;
+    	font-size: 44px;
+    	padding: 48px 0px;
+	}*/
+	.d-arrow {
+       width: 10px;
+	}
+	.headmenu .icons .icons2 {
+	    height: 32px;
+	}
+	.footer-contact-info {
+	    line-height: 85px;
 	}
 }
 @media screen and (max-width: 379px) {
@@ -3236,16 +3307,18 @@
 		/*height: 13.5625rem;*/
 	}
 	.cart-icon {
-		top: 70px;
-	    left: 118px;
-	    width: 43px;
-	    height: 46px;
+		top: 36px;
+	    left: 59px;
+	    width: 39px;
+	    height: 39px;
 	}
 	.cart-icon {
 	    font-size: 22px;
 	}
 	.shop-cart-icon i {
-	    font-size: 22px;
+	    font-size: 19px;
+        left: 0px;
+        top: 0px;
 	}
 	.shop-img img {
 	    height: 16.25rem;
@@ -3289,13 +3362,15 @@
     	font-size: 66px;
 	}
 	.cart-icon {
-		left: 107px;
-    	top: 72px;
+		left: 125px;
+    	top: 82px;
+    	width: 46px;
+    	height: 46px;
 	}
 	.shop-cart-icon i {
-		font-size: 30px;
-		top: -75px;
-		left: -118px;
+		font-size: 24px;
+	    top: 2px;
+	    left: 0px;
 	}
 	.headmenu .des2 {
    		font-size: 46px;
@@ -3778,6 +3853,11 @@
 	.shop-images img {
 	    /*height: 12.5625rem;*/
 	}
+	.shop-items {
+	    width: 86%;
+	    border-radius: 10px 10px 0px 0px;
+    	margin: 0px 0px 23px 0px;
+	}
 	
 }
 @media screen and (max-width: 320px) {
@@ -3853,6 +3933,7 @@
 	}
 	.headmenu .icons .icons2 {
 		width: 137px;
+		height: 126px;
 	}
 	.dropdown-account {
 		width: 25%;
@@ -4018,23 +4099,23 @@
 		position: relative;
 	}
 	span.filter-show {
-		font-size: 50px;
+		font-size: 69px;
 	}
 	button.filter-show-btn {
-		padding: 26px 77px;
+		width: 319px;
+    	height: 137px;
 	}
 	.shop-img img {
-		height: 49.5625rem;
+		height: 61.5625rem;
 	}
 	.shop-images img {
 		/*height: 49.5625rem;*/
 	}
-	/*.shop-items {
-		width: 90%;
-		margin: 0 auto;
-	}*/
+	.shop-items {
+    	margin: 0px 0px 110px 0px;
+	}
 	.shop-company {
-		font-size: 69px;
+		font-size: 94px;
 		margin-top: 200px;
 	}
 	.cart-icon {
@@ -4049,12 +4130,18 @@
 	}
 	.shop-item-name {
 		font-size: 66px;
+		padding: 26px 0px 26px 0px;
 	}
 	.shop-item-price {
 		font-size: 65px;
+		line-height: 1.6;
 	}
 	.shop-anchors {
-		font-size: 70px;
+		font-size: 80px;
 	}
+	.shop-anchors-filter {
+	    margin: 7.5625rem;
+	}
+
 }
 
