--- a/public/css/myorder.css
+++ b/public/css/myorder.css
@@ -69,8 +69,8 @@ img.line {
 
 .data-container {
     width: 700px;
-    height: 553px;
-    max-height: fit-content;
+    height: 700px;
+    max-height: 1000px;
     background-color: #f9f9f9;
     /* margin-left: 31%;
     margin-top: 1rem; */
@@ -198,6 +198,7 @@ and (orientation:portrait){
         position: relative;
         /* left: 28.5%; */
         padding: 15px;
+        font-size: 32px;
     }
     .header-container {
         width: 1440px;
@@ -243,6 +244,12 @@ and (orientation:portrait){
         position: relative;
         left: 15px;
     }
+    .librebais td {
+        font-size: 20px;
+    }
+    .librebais a {
+        font-size: 20px;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -275,7 +282,7 @@ and (orientation:portrait){
     }
     .order-stat {
         padding: 15px;
-        font-size: 22px;
+        font-size: 32px;
         width: 850px;
         position: relative;
         /* left: 13.5%; */
@@ -314,16 +321,16 @@ and (orientation:portrait){
         font-size: 26px;
     }       
     td.check-data1 {
-        font-size: 24px;
+        font-size: 22px;
         text-align: left;
     }
     td.check-quantz1 {
-        font-size: 24px;
+        font-size: 22px;
         position: relative;
         /* left: 10.5rem; */
     }       
     td.check-price1 {
-        font-size: 24px;
+        font-size: 22px;
         position: relative;
         /* left: 23.5rem;  */
     }
@@ -504,9 +511,11 @@ and (orientation:portrait){
     }  
     td.check-quantz1 {
         font-size: 28px;
+        width: 100px;
     }
     td.check-price1 {
         font-size: 28px;
+        width: 300px;
     }          
 
     /* navbar css */
@@ -560,6 +569,7 @@ and (orientation:portrait){
     td.check-data1 {
         font-size: 28px;
         text-align: left;
+        width: 300px;
     }
     span.footer-title {
         font-size: 32px;
@@ -915,7 +925,7 @@ and (orientation:portrait){
     button.receive {
         position: relative;
         top: 12rem;
-        font-size: 36px;
+        font-size: 42px;
     }
     .data-container {
         width: 850px;
@@ -933,10 +943,12 @@ and (orientation:portrait){
     }
     td.check-data1 {
         font-size: 36px;
+        width: 650px;
     }
     td.check-quantz1 {
         font-size: 34px;
         /* left: 6rem; */
+        width: 100px;
         
     }
     td.margin-toptr.qp {
@@ -951,6 +963,7 @@ and (orientation:portrait){
         position: relative;
         /* left: 17rem; */
         font-size: 34px;
+        width: 300px;
     }
     /* my profile */
     h5.user-name {
