--- a/public/css/pastorder.css
+++ b/public/css/pastorder.css
@@ -8,6 +8,7 @@ tbody.cart-table-conts {
 }
 a.mini-size {
     font-size: 13px!important;
+    color:black;
 }
 
 
@@ -75,11 +76,14 @@ a.mini-size {
         font-size: 38px;
     }
     .info-contacts {
-        font-size: 30px;
+        font-size: 50px;
     }
-    span.sp {
-        font-size: 30px;
-    }
+        span.sp {
+            font-size: 50px;
+            width: 950px;
+            height: 50px;
+            line-height: 86px;
+        }
 }    
     button.receive {
         font-size: 30px;
@@ -127,13 +131,40 @@ a.mini-size {
     .librebais td {
         width: 16%;
     }
-}    
+
+}   
+@media only screen 
+and (max-width:736px)
+and (min-width:414px)
+and (orientation:portrait)
+{
+
+    button.reorder {
+        font-size: 50px;
+    }
+    .librebais td {
+        font-size: 38px;
+    }
+    .librebais a {
+        font-size: 45px;
+    }
+    a.mini-size {
+        font-size: 35px!important;
+        color: black;
+    }    
+
+} 
 @media only screen and (max-width: 411px) {
     .headmenu .icons .icons3 {
-        width: 5.1875rem;
+        width: 78px;
+        height: 68px;
     }
     .librebais a {
         font-size: 38px;
+    }
+    a.mini-size {
+        font-size: 35px!important;
+        color: black;
     }
     .librebais td {
         width: 16%;
@@ -186,14 +217,14 @@ a.mini-size {
         width: 450px;
     }
     .librebais a {
-        font-size: 42px;
+        font-size: 45px;
     }
     .librebais td {
         width: 16%;
-        font-size: 42px;
+        font-size: 45px;
     }
     button.reorder {
-        font-size: 34px;
+        font-size: 50px;
     }
     .copyright {
         font-size: 38px;
