--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -354,7 +354,7 @@
   }
   
   .col-price {
-	width: 100%;
+	width: 34%;
 	text-align: end;
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -366,7 +366,7 @@
   }
   
   button.addcart {
-	width: 50%;
+	width: 14%;
 	height: 56px;
 	color: #fff;
 	background: #c4a256;
@@ -374,8 +374,10 @@
 	border: none;
 	border-radius: 4px;
 	outline: none;
-	margin-top: 20px;
 	cursor: pointer;
+	position: absolute;
+    right: 13px;
+    top: 58px;
   }
   
   .shop-item-name-info {
@@ -1101,6 +1103,9 @@
 		height: 52px;
 		margin-top: 28px;
 	}
+	.shop-item-image {
+	    /*width: 46%;*/
+	}
 	
 }
 @media screen and (max-width: 1000px){
@@ -1252,7 +1257,7 @@
 		width: 90%;
 	}
 	button.addcart {
-		width: 100%;
+		/*width: 100%;*/
 	}
 	.shop-img img {
 		width: 100%;
@@ -1275,8 +1280,6 @@
 	}*/
 }
 @media screen and (max-width: 850px) {
-
-
 	.__item .box2 {
 		/*height: 247px;*/
 	}
@@ -1286,6 +1289,15 @@
 	/*.shop-images img {
 		width: 227px;
 	}*/
+	.shop-info-price {
+	    font-size: 26px;
+	}
+	.shop-sorting {
+	    font-size: 28px;
+	}
+	.sort-items select {
+	    font-size: 25px;
+	}
 }
 @media screen and (max-width: 800px){
 	.icon-holder {
@@ -1440,6 +1452,8 @@
 	    display: flex;
         width: 100%;
         justify-content: space-between;
+        /*z-index: 1;
+    	position: fixed;*/
 	}
 	.headmenu .icons {
 	    position: unset; 
@@ -1524,7 +1538,8 @@
 		background-color: #2a2c2f;
 		/*width: 100%;*/
 		display: flex;
-		position: absolute;
+		position: fixed;
+		/*margin-top: 159px;*/
 	    /* overflow: auto; */
 	}
 	.topnav a {
@@ -1558,7 +1573,7 @@
 	}
 	.bttn2 {
 		margin-left: 5px;
-		width: 39%;
+		width: 44%;
 	}
 	.sales1 {
 		top: 28%;
@@ -1945,7 +1960,7 @@
 		font-size: 26px;
 	}
 	.shop-info-price {
-    	font-size: 13px;
+    	font-size: 15px;
 	}
 	.sort-items select {
 		font-size: 15px;
@@ -2022,6 +2037,7 @@
 	}
 	.librebais img {
 		width: 138px;
+		display: none;
 	}
 	.librebais a {
 		font-size: 18px;
@@ -2079,8 +2095,8 @@
 		width: 100%;
 	}
 	.cart-icon {
-		width: 40px;
-    	height: 43px
+		width: 45px;
+    	height: 46px;
 	}
 	.shop-cart-icon i {
 		/*color: #ccc;*/
@@ -2140,7 +2156,7 @@
 	    font-size: 38px;
 	}
 	.shop-info-price {
-        font-size: 13px;
+        font-size: 16px;
 	}
 	
 }
@@ -2166,8 +2182,11 @@
 	.librebais img {
 		width: 82px;
 	}
+	.librebais td {
+	    width: 18%;
+	}
 	.product-on-cart td {
-	    font-size: 12px;
+	    font-size: 17px;
 	}
 	.shipping-info {
 		line-height: 2.75rem;
@@ -2252,6 +2271,9 @@
 	}
 	.__item {
 	    width: 41%;
+	}
+	.shop-info-price {
+        font-size: 17px;
 	}
 }
 @media screen and (max-width:630px){
@@ -2374,7 +2396,8 @@
 		margin-top: 36px;
 	}
 	.sales1 {
-		margin-top: 63px;
+		margin-top: -83px;
+		width: 57%;
 	}
 	.centered {
 		font-size: 31px;
@@ -2624,7 +2647,7 @@
 	    object-fit: cover;
 	}
 	.shop-info-price {
-	    font-size: 14px;
+	    font-size: 16px;
 	}
 	.shop-anchors {
 		font-size: 18px;
@@ -2821,6 +2844,9 @@
 @media screen and (max-width: 450px) {
 	.__item {
 	    width: 40%;
+	}
+	.shop-items {
+	    width: 44%;
 	}
 }
 
@@ -3370,6 +3396,9 @@
 	}
 	.shop-cart-icon i {
 	    padding: 0px 5px;
+	}
+	.centered span {
+	    font-size: 22px;
 	}
 }
 @media screen and (max-width: 360px) {
@@ -3953,7 +3982,9 @@
 	    margin-left: 0px;
 	}
 	.filter-cat {
-    	line-height: 4.9375rem;
+    	line-height: 8.9375rem;
+    	height: 1175px;
+    	font-size: 59px;
 	}
 	.shop-left {
 		margin-left: -41px;
@@ -4170,7 +4201,7 @@
     	top: 41%;
 	}
 	.shop-cart-icon i {
-		padding: 43px 30px;
+		padding: 29px 30px;
 		font-size: 85px;
 	}
 	.shop-item-name {
@@ -4187,6 +4218,27 @@
 	.shop-anchors-filter {
 	    margin: 7.5625rem;
 	}
-
+	.icon-holder {
+	    padding: 6px 27px;
+	}
+	a#numb-item {
+	    width: 67px;
+	    height: 67px;
+	    bottom: -21px;
+	    left: 73px;
+	}
+	.badge2 {
+		font-size: 53px;
+	}
+	.showing {
+	    width: 38.4375rem;
+	}
+	.shop-filters .close-btn {
+	    font-size: 75px;
+	    margin-top: 23px;
+	}
+	.title-header {
+	    font-size: 62px;
+	}
 }
 
