--- a/public/css/contactresponsive.css
+++ b/public/css/contactresponsive.css
@@ -454,6 +454,14 @@ and (orientation: portrait)
         position: relative;
         left: 0%;
     }
+
+    .col-sm-12.move-t0-right {
+        position: relative;
+        right: 29rem;
+    }
+    #contact .container {
+        width: 100%;
+    }
     img.d-arrow.dar {
         display: none;
     }
@@ -837,6 +845,18 @@ and (orientation: portrait)
         position: relative;
         left: -27%;
     }
+    .info-contacts {
+        font-size: 16px;
+    }
+    .footer-contact-info {
+        line-height: 45px;
+        width: 100%;
+        padding-top: 29px;
+    }
+    .footer-desc {
+        margin: 10px -16px!important;
+        width: 270px!important;
+    }
     .dropdown-content-account a {
         color: black;
         padding: 12px 16px;
@@ -846,7 +866,7 @@ and (orientation: portrait)
         width: 300px;
     }
     span.sp {
-        font-size: 18px;
+        font-size: 17px;
     }
     span.footer-title {
         font-size: 19px;
@@ -918,6 +938,17 @@ and (orientation: portrait)
         display: none;
     }
 
+}
+@media screen and (min-width: 768px){
+    span.sp {
+        width: 300px;
+    }
+    .image-cont img {
+        width: 137px;
+    }    
+    .footer-title-gallery {
+        width: 300px;
+    }    
 }
 
 @media only screen 
@@ -1106,7 +1137,7 @@ and (orientation:portrait)
 {
 
     textarea.form-control.form_1 {
-        width: 192%;
+        width: 261%;
         border: solid;
     }
     .headmenu .icons .icons2 {
